--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
         <!-- <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div> -->
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div> -->
 
       </div>
 
